LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/ACC_YEAR__c.field-meta.xml
<CustomField>
    <fullName>ACC_YEAR__c</fullName>
    <description>ACC_YEAR</description>
    <externalDeveloperName>ACC_YEAR</externalDeveloperName>
    <label>ACC_YEAR</label>
    <length>9</length>
    <type>Text</type>
</CustomField>