LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/AGAINSTINVOICE_AID__c.field-meta.xml
<CustomField>
    <fullName>AGAINSTINVOICE_AID__c</fullName>
    <description>AGAINSTINVOICE_AID</description>
    <externalDeveloperName>AGAINSTINVOICE_AID</externalDeveloperName>
    <label>AGAINSTINVOICE_AID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>