LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/APP_FLAG__c.field-meta.xml
<CustomField>
    <fullName>APP_FLAG__c</fullName>
    <description>APP_FLAG</description>
    <externalDeveloperName>APP_FLAG</externalDeveloperName>
    <label>APP_FLAG</label>
    <length>8</length>
    <type>Text</type>
</CustomField>