LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/APPROVED_DATE__c.field-meta.xml
<CustomField>
    <fullName>APPROVED_DATE__c</fullName>
    <description>APPROVED_DATE</description>
    <externalDeveloperName>APPROVED_DATE</externalDeveloperName>
    <label>APPROVED_DATE</label>
    <type>DateTime</type>
</CustomField>