LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/AUTH_COMP_ADD__c.field-meta.xml
<CustomField>
    <fullName>AUTH_COMP_ADD__c</fullName>
    <description>AUTH_COMP_ADD</description>
    <externalDeveloperName>AUTH_COMP_ADD</externalDeveloperName>
    <label>AUTH_COMP_ADD</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>