LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/AUTH_COMP_NAME__c.field-meta.xml
<CustomField>
    <fullName>AUTH_COMP_NAME__c</fullName>
    <description>AUTH_COMP_NAME</description>
    <externalDeveloperName>AUTH_COMP_NAME</externalDeveloperName>
    <label>AUTH_COMP_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>