LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/AUTHORIZED_SIGN__c.field-meta.xml
<CustomField>
    <fullName>AUTHORIZED_SIGN__c</fullName>
    <description>AUTHORIZED_SIGN</description>
    <externalDeveloperName>AUTHORIZED_SIGN</externalDeveloperName>
    <label>AUTHORIZED_SIGN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>