LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/BUSINESS_NATURE_ID__c.field-meta.xml
<CustomField>
    <fullName>BUSINESS_NATURE_ID__c</fullName>
    <description>BUSINESS_NATURE_ID</description>
    <externalDeveloperName>BUSINESS_NATURE_ID</externalDeveloperName>
    <label>BUSINESS_NATURE_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>