LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/CERTIFICATE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CERTIFICATE_TYPE__c</fullName>
    <description>CERTIFICATE_TYPE</description>
    <externalDeveloperName>CERTIFICATE_TYPE</externalDeveloperName>
    <label>CERTIFICATE_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>