LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/CONTACT_PERSON__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_PERSON__c</fullName>
    <description>CONTACT_PERSON</description>
    <externalDeveloperName>CONTACT_PERSON</externalDeveloperName>
    <label>CONTACT_PERSON</label>
    <length>150</length>
    <type>Text</type>
</CustomField>