LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/CR_NOTE_REASON__c.field-meta.xml
<CustomField>
    <fullName>CR_NOTE_REASON__c</fullName>
    <description>CR_NOTE_REASON</description>
    <externalDeveloperName>CR_NOTE_REASON</externalDeveloperName>
    <label>CR_NOTE_REASON</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>