LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/CR_NOTE_REASON_ID__c.field-meta.xml
<CustomField>
    <fullName>CR_NOTE_REASON_ID__c</fullName>
    <description>CR_NOTE_REASON_ID</description>
    <externalDeveloperName>CR_NOTE_REASON_ID</externalDeveloperName>
    <label>CR_NOTE_REASON_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>