LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/CURRENCY_ID__c.field-meta.xml
<CustomField>
    <fullName>CURRENCY_ID__c</fullName>
    <description>CURRENCY_ID</description>
    <externalDeveloperName>CURRENCY_ID</externalDeveloperName>
    <label>CURRENCY_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>