LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/CUST_BILL_ADDR__c.field-meta.xml
<CustomField>
    <fullName>CUST_BILL_ADDR__c</fullName>
    <description>CUST_BILL_ADDR</description>
    <externalDeveloperName>CUST_BILL_ADDR</externalDeveloperName>
    <label>CUST_BILL_ADDR</label>
    <length>250</length>
    <type>Text</type>
</CustomField>