LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/CUST_ID__c.field-meta.xml
<CustomField>
    <fullName>CUST_ID__c</fullName>
    <description>CUST_ID</description>
    <externalDeveloperName>CUST_ID</externalDeveloperName>
    <label>CUST_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>