LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/DATE_UPD__c.field-meta.xml
<CustomField>
    <fullName>DATE_UPD__c</fullName>
    <description>DATE_UPD</description>
    <externalDeveloperName>DATE_UPD</externalDeveloperName>
    <label>DATE_UPD</label>
    <type>DateTime</type>
</CustomField>