LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/DEBIT_FLG__c.field-meta.xml
<CustomField>
    <fullName>DEBIT_FLG__c</fullName>
    <description>DEBIT_FLG</description>
    <externalDeveloperName>DEBIT_FLG</externalDeveloperName>
    <label>DEBIT_FLG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>