LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/DOCUMENT_ID__c.field-meta.xml
<CustomField>
    <fullName>DOCUMENT_ID__c</fullName>
    <description>DOCUMENT_ID</description>
    <externalDeveloperName>DOCUMENT_ID</externalDeveloperName>
    <label>DOCUMENT_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>