LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/EXCHANGE_RATE__c.field-meta.xml
<CustomField>
    <fullName>EXCHANGE_RATE__c</fullName>
    <description>EXCHANGE_RATE</description>
    <externalDeveloperName>EXCHANGE_RATE</externalDeveloperName>
    <label>EXCHANGE_RATE</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>