LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/EXIGST__c.field-meta.xml
<CustomField>
    <fullName>EXIGST__c</fullName>
    <description>EXIGST</description>
    <externalDeveloperName>EXIGST</externalDeveloperName>
    <label>EXIGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>