LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/GST_AID__c.field-meta.xml
<CustomField>
    <fullName>GST_AID__c</fullName>
    <description>GST_AID</description>
    <externalDeveloperName>GST_AID</externalDeveloperName>
    <label>GST_AID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>