LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/GSTNSTATUS__c.field-meta.xml
<CustomField>
    <fullName>GSTNSTATUS__c</fullName>
    <description>GSTNSTATUS</description>
    <externalDeveloperName>GSTNSTATUS</externalDeveloperName>
    <label>GSTNSTATUS</label>
    <length>8</length>
    <type>Text</type>
</CustomField>