LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/INV_MAIL_ID__c.field-meta.xml
<CustomField>
    <fullName>INV_MAIL_ID__c</fullName>
    <description>INV_MAIL_ID</description>
    <externalDeveloperName>INV_MAIL_ID</externalDeveloperName>
    <label>INV_MAIL_ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>