LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/INVOICE_DATE__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_DATE__c</fullName>
    <description>INVOICE_DATE</description>
    <externalDeveloperName>INVOICE_DATE</externalDeveloperName>
    <label>INVOICE_DATE</label>
    <type>DateTime</type>
</CustomField>