LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/INVOICE_MID__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_MID__c</fullName>
    <description>INVOICE_MID</description>
    <externalDeveloperName>INVOICE_MID</externalDeveloperName>
    <label>INVOICE_MID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>