LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/INVOICE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_TYPE__c</fullName>
    <description>INVOICE_TYPE</description>
    <externalDeveloperName>INVOICE_TYPE</externalDeveloperName>
    <label>INVOICE_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>