LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/INVORCRNOTE__c.field-meta.xml
<CustomField>
    <fullName>INVORCRNOTE__c</fullName>
    <description>INVORCRNOTE</description>
    <externalDeveloperName>INVORCRNOTE</externalDeveloperName>
    <label>INVORCRNOTE</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>