LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/ISRPTPRINTED__c.field-meta.xml
<CustomField>
    <fullName>ISRPTPRINTED__c</fullName>
    <description>ISRPTPRINTED</description>
    <externalDeveloperName>ISRPTPRINTED</externalDeveloperName>
    <label>ISRPTPRINTED</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>