LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/LOCATION_CODE__c.field-meta.xml
<CustomField>
    <fullName>LOCATION_CODE__c</fullName>
    <description>LOCATION_CODE</description>
    <externalDeveloperName>LOCATION_CODE</externalDeveloperName>
    <label>LOCATION_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>