LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/LOCATION_ID__c.field-meta.xml
<CustomField>
    <fullName>LOCATION_ID__c</fullName>
    <description>LOCATION_ID</description>
    <externalDeveloperName>LOCATION_ID</externalDeveloperName>
    <label>LOCATION_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>