LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/MID_CODE__c.field-meta.xml
<CustomField>
    <fullName>MID_CODE__c</fullName>
    <description>MID_CODE</description>
    <externalDeveloperName>MID_CODE</externalDeveloperName>
    <label>MID_CODE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>