LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/NATURE_OF_SAC__c.field-meta.xml
<CustomField>
    <fullName>NATURE_OF_SAC__c</fullName>
    <description>NATURE_OF_SAC</description>
    <externalDeveloperName>NATURE_OF_SAC</externalDeveloperName>
    <label>NATURE_OF_SAC</label>
    <length>8</length>
    <type>Text</type>
</CustomField>