LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/NET_AMT__c.field-meta.xml
<CustomField>
    <fullName>NET_AMT__c</fullName>
    <description>NET_AMT</description>
    <externalDeveloperName>NET_AMT</externalDeveloperName>
    <label>NET_AMT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>