LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/OUT_COLL_DATE__c.field-meta.xml
<CustomField>
    <fullName>OUT_COLL_DATE__c</fullName>
    <description>OUT_COLL_DATE</description>
    <externalDeveloperName>OUT_COLL_DATE</externalDeveloperName>
    <label>OUT_COLL_DATE</label>
    <type>DateTime</type>
</CustomField>