LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/PROJECT_ID__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_ID__c</fullName>
    <description>PROJECT_ID</description>
    <externalDeveloperName>PROJECT_ID</externalDeveloperName>
    <label>PROJECT_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>