LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/REF_INVOICE_MID__c.field-meta.xml
<CustomField>
    <fullName>REF_INVOICE_MID__c</fullName>
    <description>REF_INVOICE_MID</description>
    <externalDeveloperName>REF_INVOICE_MID</externalDeveloperName>
    <label>REF_INVOICE_MID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>