LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/REJECT_REASON__c.field-meta.xml
<CustomField>
    <fullName>REJECT_REASON__c</fullName>
    <description>REJECT_REASON</description>
    <externalDeveloperName>REJECT_REASON</externalDeveloperName>
    <label>REJECT_REASON</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>