LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/REM_MAIL_ID__c.field-meta.xml
<CustomField>
    <fullName>REM_MAIL_ID__c</fullName>
    <description>REM_MAIL_ID</description>
    <externalDeveloperName>REM_MAIL_ID</externalDeveloperName>
    <label>REM_MAIL_ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>