LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/REVIEW_DATE__c.field-meta.xml
<CustomField>
    <fullName>REVIEW_DATE__c</fullName>
    <description>REVIEW_DATE</description>
    <externalDeveloperName>REVIEW_DATE</externalDeveloperName>
    <label>REVIEW_DATE</label>
    <type>DateTime</type>
</CustomField>