LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/REVIEW_FLG__c.field-meta.xml
<CustomField>
    <fullName>REVIEW_FLG__c</fullName>
    <description>REVIEW_FLG</description>
    <externalDeveloperName>REVIEW_FLG</externalDeveloperName>
    <label>REVIEW_FLG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>