LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/RPT_RELEASE_DATE__c.field-meta.xml
<CustomField>
    <fullName>RPT_RELEASE_DATE__c</fullName>
    <description>RPT_RELEASE_DATE</description>
    <externalDeveloperName>RPT_RELEASE_DATE</externalDeveloperName>
    <label>RPT_RELEASE_DATE</label>
    <type>DateTime</type>
</CustomField>