LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/TRANSACTION_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TRANSACTION_TYPE__c</fullName>
    <description>TRANSACTION_TYPE</description>
    <externalDeveloperName>TRANSACTION_TYPE</externalDeveloperName>
    <label>TRANSACTION_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>