LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_HD__x/fields/USER_UPD__c.field-meta.xml
<CustomField>
    <fullName>USER_UPD__c</fullName>
    <description>USER_UPD</description>
    <externalDeveloperName>USER_UPD</externalDeveloperName>
    <label>USER_UPD</label>
    <length>8</length>
    <type>Text</type>
</CustomField>